auto-test/tests/chapter_18/invalid_types/extra_credit/invalid_union_lvalues/assign_non_lvalue_union_member.c

union inner {
    int y;
    long z;
};

union u {
    int x;
    union inner i;
};

union u return_union(void){
    union u result = {1};
    return result;
}

int main(void) {
    
    return_union().i.y = 1;
    return 0;
}